--- a/src/StyleSheet/style.css
+++ b/src/StyleSheet/style.css
@@ -29,6 +29,7 @@ input {
   outline: initial;
   font: inherit;
 }
+
 html {
   scroll-behavior: smooth;
 }
@@ -36,6 +37,18 @@ html {
 /* UTILITIES */
 .u-bold {
   font-weight: 700;
+}
+.fade-in {
+  animation: fadeIn 0.8s ease-in forwards;
+}
+.header-intro {
+  animation: intro 0.3s;
+}
+.search-intro{
+  animation: intro 0.3s 0.1s backwards;
+}
+.container-intro {
+  animation: intro 0.3s 0.2s backwards;
 }
 
 /* KEYFRAMES */
@@ -61,6 +74,16 @@ html {
   }
 }
 
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
 /* BASE */
 .body {
   background-color: #dee3e9;
@@ -73,6 +96,52 @@ html {
 
 .body::-webkit-scrollbar {
   display: none;
+}
+
+/* INTRO */
+.fadeIntro {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 111;
+  background-image: linear-gradient(125deg, #1f74f1 -10%, #0850b9 100%);
+}
+.fadeIntro::before {
+  content: "";
+  background-image: linear-gradient(
+    -180deg,
+    rgba(0, 0, 0, 0.025) 0,
+    rgba(0, 0, 0, 0.075) 99%
+  );
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  z-index: -1;
+}
+.fadeIntro__pattern {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  z-index: -1;
+  user-select: none;
+  transform: scale(1.1);
+}
+.fadeIntro__logo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 10rem;
+}
+.fadeIntro.close {
+  opacity: 0;
+  z-index: -1;
+  transition: all 0.7s;
 }
 
 /* HEADINGS */
@@ -105,7 +174,7 @@ html {
 /* BACKGROUND */
 .background {
   position: absolute;
-  height: 210px;
+  height: 230px;
   width: 100%;
   top: 0;
   left: 0;
@@ -155,8 +224,6 @@ html {
   position: relative;
   justify-content: center;
   padding-top: 40px;
-
-  animation: intro 0.3s;
 }
 
 .header__submit-job {
@@ -429,7 +496,6 @@ html {
 /* SEARCH */
 .search {
   position: relative;
-  animation: intro 0.3s 0.1s backwards;
 }
 
 .search__submit-btn {
@@ -495,7 +561,6 @@ html {
   border-top-right-radius: 9px;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.07);
   margin-top: 40px;
-  animation: intro 0.3s 0.2s backwards;
 }
 
 /* SEARCH RESULTS */
