--- a/src/Scss/main.scss
+++ b/src/Scss/main.scss
@@ -1,1 +1,1 @@
-@import "./variables", "./reset", "./keyframes", "./mixins", "./placeholder", "./utils", "./background", "./buttons", "./error", "./header", "./intro", "./jobDetails", "./jobInfo", "./jobItem", "./jobList", "./pagination", "./qualifications", "./results", "./reviews", "./search", "./spinner", "./mainContainer", "./headings";
+@import "./abstracts/_abstracts-dir", "./base/_base-dir", "./components/_components-dir", "./layout/_layout-dir";
