--- a/src/Scss/layout/_search-results.scss
+++ b/src/Scss/layout/_search-results.scss
@@ -11,5 +11,9 @@
         justify-content: space-between;
         padding: 10px 20px;
         border-bottom: 1px solid #e8edf0;
+
+        .count {
+            font-size: 12px;
+        }
     }
 }
