--- a/src/Scss/layout/_pagination.scss
+++ b/src/Scss/layout/_pagination.scss
@@ -4,11 +4,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 20px 1px;
+    padding: 0px 20px;
     border-top: 1px solid #e8edf0;
 
     &__number {
         font-weight: 500;
     }
-       
+
 }
