--- a/src/Scss/layout/_jobDetails.scss
+++ b/src/Scss/layout/_jobDetails.scss
@@ -5,23 +5,30 @@
     border-top-right-radius: 12px;
     border-bottom-right-radius: 8px;
 
+    @media screen and (max-width: 992px) {
+        border-bottom-right-radius: 0;
+        border-top-right-radius: 0;
+        margin-top: 10px;
+    }
+
     &__start-view {
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        max-width: 500px;
     }
 
     &__start-text {
         opacity: 0.55;
         color: #24292d;
-        font-size: 14px;
+        font-size: 16px;
         width: 275px;
         text-align: center;
 
         &--big {
             color: #0d1114;
-            font-size: 18px;
+            font-size: 22px;
             font-weight: 600;
             margin-bottom: 10px;
         }
@@ -40,6 +47,10 @@
         object-fit: cover;
         border-top-right-radius: 8px;
         user-select: none;
+
+        @media screen and (max-width: 992px) {
+            border-top-right-radius: 0px;
+        }
     }
 
     &__other {
@@ -48,7 +59,7 @@
 
     &__footer {
         margin: 0px 42px;
-        padding-top: 13px;
+        padding: 15px 0px;
         border-top: 1px solid #dce2e8;
 
         &-text {
