--- a/src/Scss/layout/_mainContainer.scss
+++ b/src/Scss/layout/_mainContainer.scss
@@ -5,15 +5,28 @@
     justify-content: center;
 
     .container {
-        margin: 27px 20px 0 20px;
-        width: 1200px;
+        margin: 30px 20px;
+        width: 960px;
         height: 607px;
         background-color: #fff;
         border-radius: 8px;
         display: flex;
+        flex-direction: row;
         border-top-right-radius: 9px;
         box-shadow: 0 3px 5px rgba(0, 0, 0, 0.07);
         margin-top: 40px;
+
+        @media screen and (min-width: 1100px) {
+            width: 1060px;
+        }
+
+        @media screen and (max-width: 992px) {
+            flex-direction: column;
+            width: 100%;
+            height: 100%;
+            border-radius: 0px;
+            margin: 30px 20px 0px 20px;
+        }
     }
 
     .intro {
