--- a/src/Scss/layout/_jobInfo.scss
+++ b/src/Scss/layout/_jobInfo.scss
@@ -26,16 +26,16 @@
     &__left {
         padding-left: 42px;
 
-        @media screen and (max-width: 450px) {
-            padding-left: 15px;
+        @media screen and (max-width: 567px) {
+            padding-left: 21px;
         }
     }
 
     &__right {
         padding-right: 42px;
 
-        @media screen and (max-width: 450px) {
-            padding-right: 15px;
+        @media screen and (max-width: 567px) {
+            padding-right: 21px;
         }
     }
 
@@ -87,6 +87,10 @@
     &__extras {
         display: flex;
         column-gap: 35px;
+
+        @media screen and (max-width: 450px) {
+            column-gap: 15px;
+        }
     }
 
     &__extra {
