--- a/src/Scss/layout/_qualifications.scss
+++ b/src/Scss/layout/_qualifications.scss
@@ -1,13 +1,22 @@
 .qualifications {
     display: flex;
-    padding-left: 42px;
-    padding-right: 42px;
+    margin-left: 42px;
+    margin-right: 42px;
     margin-bottom: 30px;
+
+    @media screen and (max-width: 576px) {
+        flex-direction: column;
+        row-gap: 20px;
+    }
 
     &__sub-text {
         font-size: 13px;
         width: 157px;
         margin-top: 3px;
+
+        @media screen and (max-width: 576px) {
+            width: fit-content;
+        }
     }
 
     &__left {
