--- a/src/Scss/components/_headings.scss
+++ b/src/Scss/components/_headings.scss
@@ -10,6 +10,10 @@
     font-size: 23px;
     color: #fff;
     font-weight: 500;
+
+    @media screen and (max-width: 450px) {
+        font-size: 20px;
+    }
 }
 
 .third-heading {
