--- a/src/Scss/layout/_jobDetails.scss
+++ b/src/Scss/layout/_jobDetails.scss
@@ -4,11 +4,12 @@
     position: relative;
     border-top-right-radius: 12px;
     border-bottom-right-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
 
     @media screen and (max-width: 992px) {
         border-bottom-right-radius: 0;
         border-top-right-radius: 0;
-        margin-top: 10px;
+        min-height: 300px;
     }
 
     &__start-view {
@@ -16,19 +17,18 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        max-width: 500px;
     }
 
     &__start-text {
         opacity: 0.55;
         color: #24292d;
-        font-size: 16px;
-        width: 275px;
+        font-size: 15px;
+        width: 300px;
         text-align: center;
 
         &--big {
             color: #0d1114;
-            font-size: 22px;
+            font-size: 24px;
             font-weight: 600;
             margin-bottom: 10px;
         }
