--- a/src/Scss/layout/_jobDetails.scss
+++ b/src/Scss/layout/_jobDetails.scss
@@ -9,7 +9,10 @@
     @media screen and (max-width: 992px) {
         border-bottom-right-radius: 0;
         border-top-right-radius: 0;
-        min-height: 300px;
+    }
+
+    @media screen and (max-width: 768px) {
+        min-height: 450px;
     }
 
     &__start-view {
