--- a/src/Scss/layout/_search-results.scss
+++ b/src/Scss/layout/_search-results.scss
@@ -6,10 +6,12 @@
     cursor: default;
 
     @media screen and (max-width: 992px) {
-        width: 100%;
+      width: 320px;
     }
 
-    @media screen and (max-width: 992px) {
+
+    @media screen and (max-width: 768px) {
+        width: 100%;
         min-height: 300px;
     }
 
