--- a/src/StyleSheet/main.css
+++ b/src/StyleSheet/main.css
@@ -519,7 +519,11 @@ html {
   .job-details {
     border-bottom-right-radius: 0;
     border-top-right-radius: 0;
-    min-height: 300px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .job-details {
+    min-height: 450px;
   }
 }
 .job-details__start-view {
@@ -602,6 +606,11 @@ html {
 .job-info__left {
   padding-left: 42px;
 }
+@media screen and (max-width: 992px) {
+  .job-info__left {
+    padding-left: 21px;
+  }
+}
 @media screen and (max-width: 567px) {
   .job-info__left {
     padding-left: 21px;
@@ -609,6 +618,11 @@ html {
 }
 .job-info__right {
   padding-right: 42px;
+}
+@media screen and (max-width: 992px) {
+  .job-info__right {
+    padding-left: 21px;
+  }
 }
 @media screen and (max-width: 567px) {
   .job-info__right {
@@ -656,6 +670,12 @@ html {
   display: flex;
   -moz-column-gap: 35px;
        column-gap: 35px;
+}
+@media screen and (max-width: 992px) {
+  .job-info__extras {
+    -moz-column-gap: 25px;
+         column-gap: 25px;
+  }
 }
 @media screen and (max-width: 450px) {
   .job-info__extras {
@@ -890,6 +910,7 @@ html {
 .main .container {
   margin: 30px 20px;
   width: 960px;
+  min-height: 610px;
   height: 620px;
   background-color: #fff;
   border-radius: 8px;
@@ -907,11 +928,19 @@ html {
 }
 @media screen and (max-width: 992px) {
   .main .container {
+    border-radius: 0px;
+    width: 100%;
+    height: -moz-fit-content;
+    height: fit-content;
+    min-height: 607px;
+    margin: 30px 20px 0px 20px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .main .container {
     flex-direction: column;
     width: 100%;
     height: 100%;
-    border-radius: 0px;
-    margin: 30px 20px 0px 20px;
   }
 }
 .main .intro {
@@ -941,6 +970,12 @@ html {
   margin-left: 42px;
   margin-right: 42px;
   margin-bottom: 30px;
+}
+@media screen and (max-width: 992px) {
+  .qualifications {
+    flex-direction: column;
+    row-gap: 20px;
+  }
 }
 @media screen and (max-width: 576px) {
   .qualifications {
@@ -986,11 +1021,12 @@ html {
 }
 @media screen and (max-width: 992px) {
   .search-results {
-    width: 100%;
+    width: 320px;
   }
 }
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 768px) {
   .search-results {
+    width: 100%;
     min-height: 300px;
   }
 }
@@ -1009,6 +1045,12 @@ html {
   display: flex;
   padding-left: 42px;
   padding-right: 42px;
+}
+@media screen and (max-width: 992px) {
+  .reviews {
+    flex-direction: column;
+    row-gap: 20px;
+  }
 }
 @media screen and (max-width: 576px) {
   .reviews {
