responsive design updated

--- a/src/Scss/layout/_jobDetails.scss
+++ b/src/Scss/layout/_jobDetails.scss
@@ -57,7 +57,8 @@
     }
 
     &__other {
-        margin: 55px 0px;
+        margin-top: 60px;
+        margin-bottom: 90px;
     }
 
     &__footer {
