--- a/src/StyleSheet/main.css
+++ b/src/StyleSheet/main.css
@@ -135,27 +135,6 @@ html {
   color: rgba(255, 255, 255, 0.8);
 }
 
-.apply-btn {
-  position: absolute;
-  background-color: #2671dd;
-  z-index: 2;
-  color: rgba(255, 255, 255, 0.92);
-  font-size: 11px;
-  padding: 5px 10px 6px;
-  border-radius: 3px;
-  top: 12px;
-  right: 12px;
-  cursor: pointer;
-  text-transform: uppercase;
-  transition: all 0.2s;
-  display: flex;
-  align-items: center;
-}
-.apply-btn:hover, .apply-btn:focus {
-  background-color: #1d60bd;
-  color: rgb(255, 255, 255);
-}
-
 .sorting__button {
   font-size: 10px;
   text-transform: uppercase;
@@ -210,9 +189,9 @@ html {
   color: #fff;
   font-weight: 500;
 }
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 992px) {
   .second-heading {
-    font-size: 20px;
+    font-size: 19px;
   }
 }
 
@@ -567,7 +546,8 @@ html {
   }
 }
 .job-details__other {
-  margin: 55px 0px;
+  margin-top: 60px;
+  margin-bottom: 90px;
 }
 .job-details__footer {
   margin: 0px 42px;
@@ -668,8 +648,8 @@ html {
 }
 .job-info__extras {
   display: flex;
-  -moz-column-gap: 35px;
-       column-gap: 35px;
+  -moz-column-gap: 40px;
+       column-gap: 40px;
 }
 @media screen and (max-width: 992px) {
   .job-info__extras {
@@ -679,8 +659,8 @@ html {
 }
 @media screen and (max-width: 450px) {
   .job-info__extras {
-    -moz-column-gap: 15px;
-         column-gap: 15px;
+    -moz-column-gap: 10px;
+         column-gap: 10px;
   }
 }
 .job-info__extra {
@@ -690,12 +670,12 @@ html {
 }
 
 .job-item {
-  padding: 14px 20px;
+  padding: 15px 20px;
   cursor: pointer;
   transition: all 0.2s;
   background-color: #fff;
 }
-.job-item:not(:nth-child(7)) {
+.job-item:not(:nth-child(8)) {
   border-bottom: 1px solid #ebeff1;
 }
 .job-item:hover {
@@ -763,12 +743,12 @@ html {
 }
 
 .job-item {
-  padding: 14px 20px;
+  padding: 15px 20px;
   cursor: pointer;
   transition: all 0.2s;
   background-color: #fff;
 }
-.job-item:not(:nth-child(7)) {
+.job-item:not(:nth-child(8)) {
   border-bottom: 1px solid #ebeff1;
 }
 .job-item:hover {
@@ -911,7 +891,7 @@ html {
   margin: 30px 20px;
   width: 960px;
   min-height: 610px;
-  height: 620px;
+  height: 698px;
   background-color: #fff;
   border-radius: 8px;
   display: flex;
@@ -923,7 +903,6 @@ html {
 @media screen and (min-width: 1100px) {
   .main .container {
     width: 1060px;
-    height: 608px;
   }
 }
 @media screen and (max-width: 992px) {
